--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -75,7 +75,8 @@
 .archive__item-excerpt {
   margin-top: 0;
   font-size: $type-size-6;
-
+  text-align: justify;
+  
   & + p {
     text-indent: 0;
   }
@@ -242,6 +243,7 @@
   @include clearfix();
   margin-bottom: 2em;
   border-bottom: 1px solid $border-color;
+
 
   .archive__item-title {
     margin-bottom: 0;
