fix links (hopefully),  prettify author sidebar for blog posts

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,6 +37,6 @@
       </div>
     </div>
   <div class="grid-item-2">
-    <div class="page__footer-copyright">&copy;  {{ site.title }} {{ site.time | date: '%Y' }}. <a href="{{relative_url}}/site-credits/">Site Credits</a>.</div>
+    <div class="page__footer-copyright">&copy;  {{ site.title }} {{ site.time | date: '%Y' }}. <a href="{{site.baseurl}}/site-credits/">Site Credits</a>.</div>
   </div>
 </div>
