--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -19,7 +19,7 @@
   @include breakpoint($large) {
     float: left;
     width: calc(#{$right-sidebar-width-narrow} - 1em);
-    opacity: 0.75;
+    opacity: 1;
     -webkit-transition: opacity 0.2s ease-in-out;
     transition: opacity 0.2s ease-in-out;
 
@@ -134,7 +134,7 @@
   }
 
   img {
-    max-width: 200px;
+    max-width: 500px;
     border-radius: 50%;
 
     @include breakpoint($large) {
@@ -150,6 +150,9 @@
   padding-left: 15px;
   padding-right: 25px;
   line-height: 1;
+  text-align: center;
+
+
 
   @include breakpoint($large) {
     display: block;
@@ -179,6 +182,8 @@
 
 .author__bio {
   margin: 0;
+  font-style: italic;
+  text-align: center;
 
   @include breakpoint($large) {
     margin-top: 10px;
@@ -250,6 +255,7 @@
   background: $background-color;
   box-shadow: 0 2px 4px 0 rgba(#000, 0.16), 0 2px 10px 0 rgba(#000, 0.12);
   cursor: default;
+  text-align: center;
 
   &.is--visible {
     display: block;
