--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -197,9 +197,9 @@
     }
 
     &.site-title {
-      @import url('https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap');
+      @import url('//fonts.googleapis.com/css2?family=Amatic+SC');
       margin-left: 0;
-      font-family: 'Amatic SC', cursive;
+      font-family: 'Amatic SC';
       font-style: italic;
       font-size: 1.5em
     }
