--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -51,7 +51,7 @@
         <li>
           <a href="mailto:{{ author.email }}" rel="me" class="u-email">
             <meta itemprop="email" content="{{ author.email }}" />
-            <i class="fas fa-fw fa-envelope-square" aria-hidden="true"></i><span class="label">{{ site.data.ui-text[site.locale].email_label | default: "Email" }}</span>
+            <i class="fas fa-fw fa-envelope-square" aria-hidden="true"></i><span class="label">{{ author.email }}</span>
           </a>
         </li>
       {% endif %}
@@ -99,7 +99,7 @@
       {% if author.instagram %}
         <li>
           <a href="https://instagram.com/{{ author.instagram }}" itemprop="sameAs" rel="nofollow noopener noreferrer me">
-            <i class="fab fa-fw fa-instagram" aria-hidden="true"></i><span class="label">Instagram</span>
+            <i class="fab fa-fw fa-instagram" aria-hidden="true"></i><span class="label">{{ author.instagram }}</span>
           </a>
         </li>
       {% endif %}
