--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,21 +1,39 @@
 <style>
-.grid-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-.grid-item-1 {
-  padding: 0px;
-  text-align: left;
 
+.grid-container {
+  /**
+   * User input values.
+   */
+  --grid-layout-gap: 3em;
+  --grid-column-count: 2;
+  --grid-item--min-width: 300px;
+
+  /**
+   * Calculated values.
+   */
+  --gap-count: calc(var(--grid-column-count) - 1);
+  --total-gap-width: calc(var(--gap-count) * var(--grid-layout-gap));
+  --grid-item--max-width: calc((100% - var(--total-gap-width)) / var(--grid-column-count));
+
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(max(var(--grid-item--min-width), var(--grid-item--max-width)), 1fr));
+  column-gap: 3em;
+  row-gap: 1em;
 }
+
+
+.grid-item-1 {
+  text-align: left;
+}
+
 .grid-item-2 {
-  padding: 0px;
   text-align: right;
 }
+
 </style>
 
 <div class="grid-container">
-    <div class="grid-item-1">
+    <div class="grid-item">
       <div class="page__footer-follow">
         <ul class="social-icons">
           {% if site.data.ui-text[site.locale].follow_label %}
